force-app/main/default/objects/Dynamic_Screen_Details__mdt/Dynamic_Screen_Details__mdt.object-meta.xml
<CustomObject>
    <description>This cmt will be linked to Dynamic Screen header and will store section/fields layout details.</description>
    <label>Dynamic Screen Details</label>
    <pluralLabel>Dynamic Screen Details</pluralLabel>
</CustomObject>