force-app/main/default/objects/Dynamic_Screen_Details__mdt/fields/Attribute_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Attribute_Mapping__c</fullName>
    <description>Mapping for API attribute
For table enter attributeName:label</description>
    <inlineHelpText>Enter Mapping for API attribute</inlineHelpText>
    <label>Attribute Mapping</label>
    <length>255</length>
    <type>Text</type>
</CustomField>