force-app/main/default/objects/Dynamic_Screen_Details__mdt/fields/DynamicScreenHeader__c.field-meta.xml
<CustomField>
    <fullName>DynamicScreenHeader__c</fullName>
    <label>Dynamic Screen Header</label>
    <referenceTo>Dynamic_Screen_Header__mdt</referenceTo>
    <relationshipName>Dynamic_Screen_Fields</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>