force-app/main/default/objects/Dynamic_Screen_Details__mdt/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <inlineHelpText>Enter order of field for Left/Right side</inlineHelpText>
    <label>Order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>