force-app/main/default/objects/Dynamic_Screen_Details__mdt/fields/Section_Name__c.field-meta.xml
<CustomField>
    <fullName>Section_Name__c</fullName>
    <inlineHelpText>Enter section name</inlineHelpText>
    <label>Section Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>