force-app/main/default/objects/Dynamic_Screen_Details__mdt/fields/Table_Columns__c.field-meta.xml
<CustomField>
    <fullName>Table_Columns__c</fullName>
    <label>Table Columns</label>
    <type>TextArea</type>
</CustomField>