force-app/main/default/objects/Dynamic_Screen_Details__mdt/fields/Table_Page_Size__c.field-meta.xml
<CustomField>
    <fullName>Table_Page_Size__c</fullName>
    <label>Table Page Size</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>