force-app/main/default/objects/Dynamic_Screen_Details__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <inlineHelpText>Section/Left Side/Right Side/Table</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LeftSide</fullName>
                <label>Left Side</label>
            </value>
            <value>
                <fullName>RightSide</fullName>
                <label>Right Side</label>
            </value>
            <value>
                <fullName>Section</fullName>
                <default>true</default>
                <label>Section</label>
            </value>
            <value>
                <fullName>Table</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>